# udacity-project-cicd

./: .gitignore  README.md  env.yml  main.py  requirements.txt  setup.cfg
.dvc/: config
.github/workflows/: pylint.yml
src/census_project/: etl.py  train_model.py
src/census_project/artefacts/data/: transformed.csv.dvc
src/census_project/conf/: config.yaml
src/census_project/ml/: data.py  model.py
src/census_project/modules/: etl.py  training.py  utils.py
src/tests/: conftest.py
src/tests/component/: test_baz.py
src/tests/conf/: config.yaml
src/tests/integration/: test_bar.py  test_etl_dvc.py
src/tests/unit/: test_etl.py  test_foo.py  test_utils.py
