[metadata]
name = census_project
version = 0.0.1
author = Pawel Daniluk <pawel@daniluk.waw.pl>
description = Deploying a Machine Learning Model on Heroku with FastA
long_description = file: README.md, LICENSE
license = The Unlicense
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src